# weather

./: pyproject.toml
app/: main.py  settings.py
app/services/: city_resolver.py  ip_resolver.py  schemas.py  weather_formatter.py  weather_resolver.py
app/services/city/: __init__.py  city_resolver.py  exceptions.py
app/services/ip/: __init__.py  exceptions.py  ip_resolver.py
app/services/weather/: __init__.py  exceptions.py  weather_resolver.py
